@@ -1,5 +1,10 @@
 2011-02-01 Braden McDaniel  <braden@endoframe.com>
 
+	* src/mozilla-plugin/openvrml.cpp: Removed obsolete NPP_Initialize
+	and NPP_Shutdown entrypoints.
+
+2011-02-01 Braden McDaniel  <braden@endoframe.com>
+
 	Newer SpiderMonkey (XULRunner 2.0) changes the JSNative function
 	signature and the means of accessing argv, the "this" JSObject,
 	and the returned jsval.
